api communication, - big wheel of fortune changes, todo: fix animation and add result info - some vfixes (footer, header)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,6 +20,12 @@ html, body {
   pointer-events: none;
 }
 
+.navbar {
+  .nav-link {
+    color: white;
+  }
+}
+
 .footer {
   .footer-link {
     text-decoration: none;
