--- a/src/styles/wheel-of-fortune.scss
+++ b/src/styles/wheel-of-fortune.scss
@@ -5,6 +5,12 @@
     height: 500px;
     position: relative;
     transform: rotate(-90deg);
+
+    &.spin {
+      -webkit-animation: spin 10s ease-in-out;
+      -moz-animation: spin 10s ease-in-out;
+      animation: spin 10s ease-in-out;
+    }
   }
 
   &--choice {
@@ -15,13 +21,21 @@
     clip-path: polygon(50% 50%, 0 0, 0 100%);
     display: flex;
     align-items: center;
-    background: red !important;
     justify-content: space-between;
     padding: 10px;
     font-weight: bold;
   }
 }
 
+@keyframes spin {
+  0% {
+    transform: rotate(-90deg);
+  }
+
+  100% {
+    transform: rotate(5400deg);
+  }
+}
 
 
 
