--- a/src/styles/wheel-of-fortune.scss
+++ b/src/styles/wheel-of-fortune.scss
@@ -1,42 +1,104 @@
-.wheel-of-fortune {
-  &--content {
-    border-radius: 50%;
-    width: 500px;
-    height: 500px;
-    position: relative;
-    transform: rotate(-90deg);
+@import 'variables';
 
-    &.spin {
-      -webkit-animation: spin 10s ease-in-out;
-      -moz-animation: spin 10s ease-in-out;
-      animation: spin 10s ease-in-out;
+:root {
+  --startAngle: 0deg;
+  --finalAngle: 0deg;
+  --contentAngle: 0deg;
+}
+
+.spin {
+  -webkit-animation: spin 5s ease-out;
+  -moz-animation: spin 5s ease-out;
+  animation: spin 5s ease-out;
+}
+
+.fake-spin {
+  animation: fake-spin 1s ease-in-out !important;
+}
+
+.wheel-of-fortune-container {
+  display: flex;
+
+  .wheel-of-fortune-win-indicator {
+    &:before {
+      content: '';
+      width: 0;
+      height: 0;
+      margin-top: -5vh !important;
+      border-style: dashed;
+      border-left: 19vw solid rgb(35, 39, 43);
+      border-top: 5vh solid transparent;
+      border-bottom: 5vh solid transparent;
+      position: absolute;
+    }
+
+    &.active {
+      &:before {
+        border-left-color: gold;
+        animation: blink 0.75s ease infinite;
+      }
     }
   }
 
-  &--choice {
-    border-radius: 50%;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    clip-path: polygon(50% 50%, 0 0, 0 100%);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    font-weight: bold;
+  .wheel-of-fortune {
+    &--content {
+      position: relative;
+      width: 60vh;
+      height: 60vh;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+    }
+
+    &--choice {
+      border-radius: 50%;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      clip-path: polygon(50% 50%, 0 0, 0 100%);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-left: 5%;
+      padding-right: 5%;
+    }
   }
+}
+
+.blink-text {
+  animation: blink 0.75s ease infinite;
 }
 
 @keyframes spin {
   0% {
-    transform: rotate(-90deg);
+    transform: rotate(var(--startAngle));
   }
 
   100% {
-    transform: rotate(5400deg);
+    transform: rotate(var(--finalAngle));
   }
 }
 
+@keyframes fake-spin {
+  0% {
+    transform: rotate(var(--contentAngle));
+  }
 
+  100% {
+    transform: rotate(calc(var(--contentAngle) + 3600deg));
+  }
+}
 
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
 
+  50% {
+    opacity: 0.25;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
