router changes + navbar styling

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,3 +39,7 @@ html, body {
 .custom-bg-primary-light {
   background-color: $custom-bg-primary-light;
 }
+
+.custom-bg-info {
+  background-color: #7dd9fc;
+}
