wheel of fortune - small cr

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,4 @@
 $custom-bg-primary: royalblue;
 $custom-bg-primary-light: rgba(65, 105, 225, 0.25);
+$gray: rgb(35, 39, 43);
 $mobile-max-width: 767px;
