--- a/src/styles/wheel-of-fortune.scss
+++ b/src/styles/wheel-of-fortune.scss
@@ -30,14 +30,14 @@
       height: 0;
       border-style: dashed;
       margin-top: -5vh;
-      border-left: 19vw solid rgb(35, 39, 43);
+      border-left: 22vw solid $gray;
       border-top: 5vh solid transparent;
       border-bottom: 5vh solid transparent;
       position: absolute;
 
       @media (max-width: $mobile-max-width) {
         margin-top: -1.25vh;
-        border-left: 8vw solid rgb(35, 39, 43);
+        border-left: 8vw solid $gray;
         border-top: 1.25vh solid transparent;
         border-bottom: 1.25vh solid transparent;
       }
