--- a/src/styles/wheel-of-fortune.scss
+++ b/src/styles/wheel-of-fortune.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'lottery';
 
 :root {
   --startAngle: 0deg;
@@ -97,10 +98,6 @@
   }
 }
 
-.blink-text {
-  animation: blink 0.75s ease infinite;
-}
-
 @keyframes spin {
   0% {
     transform: rotate(var(--startAngle));
@@ -118,19 +115,5 @@
 
   100% {
     transform: rotate(calc(var(--contentAngle) + 3600deg));
-  }
-}
-
-@keyframes blink {
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0.25;
-  }
-
-  100% {
-    opacity: 1;
   }
 }
