--- a/src/styles/number-lottery.scss
+++ b/src/styles/number-lottery.scss
@@ -3,7 +3,7 @@
 $circle-sm-width: 50px;
 $circle-md-width: 125px;
 $numbers-count: 6;
-$select-numbers-container-min-height: calc(300px + 300px);
+$select-numbers-container-min-height: calc((125px * 4) + 150px);
 
 @keyframes hide-element {
   0% {
@@ -24,6 +24,21 @@ $select-numbers-container-min-height: calc(300px + 300px);
   100% {
     opacity: 1;
     transform: scaleX(1) scaleY(1);
+  }
+}
+
+@keyframes select-number {
+  0% {
+    opacity: 0.25;
+    transform: translateY(-200%) rotateY(0deg);
+  }
+  50% {
+    opacity: 0.75;
+    transform: translateY(-200%) rotateY(180deg);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0) rotateY(0deg);
   }
 }
 
@@ -100,7 +115,9 @@ $select-numbers-container-min-height: calc(300px + 300px);
     width: 10%;
 
     .selected-numbers {
-      .selected-number {}
+      .selected-number {
+        animation: select-number 0.3s ease-in;
+      }
     }
   }
 }
