--- a/src/styles/number-lottery.scss
+++ b/src/styles/number-lottery.scss
@@ -1,9 +1,5 @@
+@import 'variables';
 @import 'lottery';
-
-$circle-sm-width: 50px;
-$circle-md-width: 125px;
-$numbers-count: 6;
-$select-numbers-container-min-height: calc((125px * 4) + 150px);
 
 @keyframes hide-element {
   0% {
@@ -43,7 +39,7 @@ $select-numbers-container-min-height: calc((125px * 4) + 150px);
 }
 
 .max-circle-width {
-  max-width: $circle-sm-width;
+  max-width: 50px;
 }
 
 .circle {
@@ -56,13 +52,23 @@ $select-numbers-container-min-height: calc((125px * 4) + 150px);
   font-weight: bold;
   
   &.circle-sm {
-    width: $circle-sm-width;
-    height: $circle-sm-width;
+    width: 50px;
+    height: 50px;
+
+    @media (max-width: $mobile-max-width) {
+      width: 30px;
+      height: 30px;
+    }
   }
 
   &.circle-md {
-    width: $circle-md-width;
-    height: $circle-md-width;
+    width: 125px;
+    height: 125px;
+
+    @media (max-width: $mobile-max-width) {
+      width: 95px;
+      height: 95px;
+    }
   }
 }
 
@@ -71,14 +77,24 @@ $select-numbers-container-min-height: calc((125px * 4) + 150px);
 
   &--selected-numbers--container,
   &--select-numbers--container {
-    height: $select-numbers-container-min-height;
+    height: 600px;
     border: 1px solid white;
+
+    @media (max-width: $mobile-max-width) {
+      height: 500px;
+    }
   }
 
   &--select-numbers--container {
     width: 90%;
     padding-left: 20%;
     padding-right: 20%;
+
+    @media (max-width: $mobile-max-width) {
+      width: 70%;
+      padding-left: 1%;
+      padding-right: 1%;
+    }
 
     .select-numbers {
       opacity: 1;
@@ -97,6 +113,11 @@ $select-numbers-container-min-height: calc((125px * 4) + 150px);
         margin: 30px;
         flex-direction: column;
         align-items: center;
+        cursor: default;
+
+        @media (max-width: $mobile-max-width) {
+          margin: 20px 5px;
+        }
 
         &--number {
           font-size: 20px;
@@ -106,6 +127,10 @@ $select-numbers-container-min-height: calc((125px * 4) + 150px);
         &--value,
         &--currency {
           font-size: 12px;
+
+          @media (max-width: $mobile-max-width) {
+            font-size: 10px;
+          }
         }
       }
     }
@@ -114,10 +139,36 @@ $select-numbers-container-min-height: calc((125px * 4) + 150px);
   &--selected-numbers--container {
     width: 10%;
 
+    @media (max-width: $mobile-max-width) {
+      width: 30%;
+    }
+
     .selected-numbers {
       .selected-number {
         animation: select-number 0.3s ease-in;
       }
     }
+  }
+}
+
+
+.number-lottery-alerts {
+  float: left;
+  width: 50%;
+
+  @media (max-width: $mobile-max-width) {
+    margin: 3% auto;
+    float: initial;
+    width: 100%;
+  }
+}
+
+.number-lottery-buttons {
+  float: right;
+
+  @media (max-width: $mobile-max-width) {
+    margin-left: auto;
+    margin-right: auto;
+    float: initial;
   }
 }
