--- a/src/styles/fruit-machine.scss
+++ b/src/styles/fruit-machine.scss
@@ -5,13 +5,16 @@
   border: 1px solid white;
   height: 600px;
   width: 80%;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column-reverse;
 
   &--line {
     height: 20%;
     width: 100%;
     padding: 20px;
     border: 1px solid rgba(255, 255, 255, 0.5);
-    transition: transform 0.5s ease;
+    transition: transform 1s ease;
 
     &--element {
       display: inline-flex;
