--- a/src/styles/fruit-machine.scss
+++ b/src/styles/fruit-machine.scss
@@ -14,6 +14,10 @@
   display: flex;
   flex-direction: column-reverse;
 
+  @media(max-width: $mobile-max-width) {
+    width: 100%;
+  }
+
   &--line {
     height: 20%;
     width: 100%;
@@ -26,6 +30,12 @@
       place-content: center;
       color: $custom-bg-primary;
       align-items: center;
+
+      @media(max-width: $mobile-max-width) {
+        svg {
+          scale: 0.7;
+        }
+      }
 
       &.result-line-element {
         border: 3px dashed yellow;
