added about, contact pages, + seo changes

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,10 @@ html, body {
   min-height: 80vh;
 }
 
+.vh-35 {
+  height: 35vh;
+}
+
 .disabled {
   user-select: none !important;
   cursor: not-allowed;
