--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -72,6 +72,14 @@ html, body {
   cursor: pointer;
 }
 
+.max-vw-80 {
+  max-width: 80vw;
+}
+
+.list-style-inside {
+  list-style: inside;
+}
+
 .security-card {
   width: 50%;
 
