--- a/src/styles/wheel-of-fortune.scss
+++ b/src/styles/wheel-of-fortune.scss
@@ -22,6 +22,7 @@
 
   @media (max-width: $mobile-max-width) {
     margin-top: 5%;
+    overflow: hidden;
   }
 
   .wheel-of-fortune-win-indicator {
