--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,6 +54,11 @@ html, body {
   .footer-link {
     text-decoration: none;
   }
+
+  .footer-section-header {
+    cursor: default;
+    color: rgb(240, 240, 240);
+  }
 }
 
 .custom-bg-primary {
